# WinSystemShell

./: README.md  SystemRunOnce.c  SystemShellServer.py  WinSystemShell.py  pyproject.toml  setup.cfg  setup.py
