[metadata]
name = WinSystemShell
version = 0.0.2
author = Maurice Lambert
author_email = mauricelambert434@gmail.com
maintainer = Maurice Lambert
maintainer_email = mauricelambert434@gmail.com
description = A local privilege escalation utility that allows elevating from an administrator context to the SYSTEM account on Windows to perform high-privilege operations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mauricelambert/WinSystemShell
project_urls = Github=https://github.com/mauricelambert/WinSystemShell, Documentation=https://mauricelambert.github.io/info/python/security/WinSystemShell.html, Python Executable=https://mauricelambert.github.io/info/python/security/WinSystemShell.pyz, Windows Executable=https://mauricelambert.github.io/info/python/security/WinSystemShell.exe
download_url = https://mauricelambert.github.io/info/python/security/WinSystemShell.pyz
classifiers =
    Topic :: System
    Topic :: Security
    Environment :: Console
    Topic :: System :: Shells
    Natural Language :: English
    Programming Language :: Python
    Topic :: System :: System Shells
    Programming Language :: Python :: 3.8
    Operating System :: Microsoft :: Windows
    Topic :: System :: Systems Administration
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords = privilege escalation, privesc, SYSTEM, Windows, elevated rights, local admin
platforms = Windows
license = GPL-3.0 License
license_files = LICENSE.txt
# requires = 

[options]
include_package_data = True
python_requires = >=3.8
scripts = 
packages = 
py_modules = SystemShellServer, WinSystemShell
install_requires = 

[options.entry_points]
console_scripts =
    WinSystemShell = WinSystemShell:main

[egg_info]
tag_build = 
tag_date = 0
